# yanklog-linux

./: Cargo.toml  PACKAGING_LINUX.md  README.md  REPRODUCIBLE_BUILDS.md  SOURCE_BOUNDARY.md  build-appimage.sh  com.yanklog.app.desktop  install.sh  uninstall.sh
.github/workflows/: build-appimages.yml
LICENSES/: MIT.txt
apps/linux/: Cargo.toml
apps/linux/src/: app.rs  main.rs
crates/yanklog-core/: Cargo.toml
crates/yanklog-core/src/: clipboard.rs  config.rs  database.rs  lib.rs  profile.rs  updater.rs
packaging/flatpak/: README.md  com.yanklog.app.metainfo.xml  com.yanklog.app.yml  generated-sources.json
