[package]
name = "yanklog-linux-native"
version = "1.2.0"
edition.workspace = true
license = "MIT"
publish = false
authors.workspace = true

[[bin]]
name = "yanklog"
path = "src/main.rs"

[dependencies]
yanklog-core = { path = "../../crates/yanklog-core" }

[target.'cfg(target_os = "linux")'.dependencies]
adw = { package = "libadwaita", version = "0.9" }
gtk = { package = "gtk4", version = "0.11" }
ctrlc = "3.5"
fs2 = "0.4"
ksni = { version = "0.3", default-features = false, features = ["async-io", "blocking"] }
