[package]
name = "yanklog-core"
version = "1.2.0"
edition.workspace = true
license = "MIT"
publish = false
authors.workspace = true

[lib]
name = "yanklog_core"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
arboard = "3.6"
chrono = "0.4"
dirs = "5.0"
hex = "0.4"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
uniffi = "0.31.1"
